codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__catalog_model_session_header_resume.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
qmcode (v<VERSION>)
model: GPT-5.6 Luna high
directory: /tmp/thread-settings
